# igloo

./: .gitignore  Dockerfile  README.md
backend/: app.py  local.env  pyproject.toml
backend/base_models/: __init__.py  document_data.py  response_data.py
backend/controllers/: __init__.py  controller.py
backend/data/: ADT.csv  AGODA-RESTAURANT_CUISINE.csv  agoda_enums.md  agoda_mapping.json  agoda_metadata.json  agoda_restaurant_cuisines.csv  check_ingestion.csv  cui.csv  gsi.csv  hac.csv  metadata.json  ordered_mapped_cui.csv  ota.xlsm  ota_fields_to_aggregate.md  sample.json  sample.md  sample.txt
backend/settings/: base.py
backend/utils/: __init__.py  db_engine.py  file_handlers.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: document-viewer.tsx
frontend/lib/: document-parser.ts
